# Shadow-IDE

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.md  improve.md  index.html  package-lock.json  package.json  playwright.config.ts  run_test.js  run_test2.js  shadowide.service  vite.config.ts  windows.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli-bin/: shadowai
cli/src/: main.rs
e2e/: app.spec.ts  editor.spec.ts  playwright.config.ts  visual.spec.ts
native/: .gitignore  Cargo.toml  README.md
native/crates/editor-ai/: Cargo.toml
native/crates/editor-ai/src/: lib.rs
native/crates/editor-assets/: Cargo.toml
native/crates/editor-assets/src/: lib.rs
native/crates/editor-build/: Cargo.toml
native/crates/editor-build/src/: diagnostics.rs  lib.rs
native/crates/editor-core/: Cargo.toml
native/crates/editor-core/src/: lib.rs
native/crates/editor-header-tool/: Cargo.toml
native/crates/editor-header-tool/src/: main.rs
native/crates/editor-hot-reload/: Cargo.toml
native/crates/editor-hot-reload/src/: lib.rs
native/crates/editor-lsp-client/: Cargo.toml
native/crates/editor-lsp-client/src/: lib.rs
native/crates/editor-renderer/: Cargo.toml
native/crates/editor-renderer/src/: camera.rs  lib.rs  mesh.rs  primitives.rs
native/crates/editor-renderer/src/shaders/: gizmo.wgsl  grid.wgsl  pbr.wgsl
native/crates/editor-ui/: Cargo.toml
native/crates/editor-ui/src/: lib.rs
native/crates/shadow-editor/: Cargo.toml
native/crates/shadow-editor/src/: main.rs
native/runtime-sdk/examples/hello_game/: CMakeLists.txt
native/runtime-sdk/examples/hello_game/src/: components.h  game.cpp
native/runtime-sdk/include/shadow/: game_api.h  shadow_reflect.h
native/templates/empty_3d/: .shadow_project.toml  compile_commands.json
native/templates/empty_3d/.shadoweditor/: shadow_reflect.json
native/templates/empty_3d/scenes/: Main.shadow
native/templates/empty_3d/src/: components.h  game.cpp
scripts/: before-bundle.cjs  fix-appimage-deps.sh  generate_app_summary_pdf.py  prune-rust-targets.cjs  tauri-wrapper.cjs
src/: App.css  App.tsx  MobileBridge.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/: README.md
src-tauri/crates/ferrum-core/: Cargo.toml
src-tauri/crates/ferrum-core/src/: config.rs  error.rs  lib.rs  types.rs
src-tauri/crates/ferrum-llm/: Cargo.toml
src-tauri/crates/ferrum-llm/src/: cache.rs  client.rs  lib.rs  stream.rs
src-tauri/crates/ferrum-sessions/: Cargo.toml
src-tauri/crates/ferrum-sessions/src/: compact.rs  lib.rs  store.rs
src-tauri/engines/cuda12-avx2/: backend-manifest.json  display-data.json  liblmstudio_bindings_cuda12.node  llm_engine_cuda12.node
src-tauri/scripts/: fix-appimage-deps.sh
src-tauri/src/: agent_queue.rs  agent_runner.rs  ai_macros.rs  ai_skills.rs  bluetooth_server.rs  ci_adapter.rs  cloud_sync.rs  collaboration.rs  config.rs  dap_client.rs  diagnostics.rs  errors.rs  feature_flags.rs  ferrum_bridge.rs  fs_commands.rs  gamedev.rs  git_commands.rs  lib.rs  llm_loader.rs  llm_provider.rs  lsp_client.rs  manager.rs  metrics.rs  migrations.rs  model_scanner.rs  pairing.rs  platform.rs  plugin_manager.rs  project_manager.rs  pwa_client.html  rag_index.rs  remote_server.rs  session.rs  session_bridge.rs  shell_commands.rs  startup.rs  terminal.rs  todo_scanner.rs  token_budget.rs  token_optimizer.rs
src-tauri/src/ai_bridge/: chat.rs  commands.rs  compaction.rs  mod.rs  providers.rs  stream.rs  tools.rs  types.rs
src-tauri/src/tool_calling/: executor.rs  healing.rs  mod.rs  parsing.rs  registry.rs  security.rs
src-tauri/state/: Completed.md  errors.md  fixed.md  memory.md
src/components/: ActivityBar.test.tsx  ActivityBar.tsx  AgentPanel.tsx  AiActionPopup.tsx  AiChat.tsx  AiCli.tsx  AudioWaveform.tsx  BluetoothPanel.tsx  CiCdPanel.tsx  CollaborationPanel.tsx  CommandPalette.tsx  DatabasePanel.tsx  DebugPanel.tsx  DependencyGraph.tsx  DevOpsIntegrations.tsx  DiagnosticPanel.test.tsx  DiagnosticPanel.tsx  DocsPanel.tsx  EditHistoryPanel.tsx  Editor.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FerrumChat.tsx  FerrumChatInput.tsx  FerrumChatMessage.tsx  FerrumChatSessions.tsx  FileExplorer.tsx  GameDevPanel.tsx  GitGraphPanel.tsx  GlslPreviewPanel.tsx  HunkStagingPanel.tsx  InlineDiffPreview.tsx  JupyterPanel.tsx  KeybindingsPanel.tsx  LanguagesPanel.tsx  LlmEnginePanel.tsx  LlmLoader.tsx  LlmModelCard.tsx  LlmServerStatus.tsx  LogPanel.tsx  (+31 more)
src/components/ui/: Badge.tsx  Button.tsx  IconTheme.tsx  Input.tsx  Panel.tsx  index.ts
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useAiCompletion.ts  useAppState.ts  useFocusTrap.ts  useGhostDiff.ts  useKeyboardNav.ts  useResize.ts  useTauriMutation.ts  useTauriQuery.ts  useUpdater.ts
src/layouts/: ChatLayout.tsx  EditorLayout.tsx  SidebarLayout.tsx
src/planengine/: summary.ts
src/stores/: chatStore.ts  editorStore.ts  index.ts  llmStore.ts
src/test/: setup.ts
src/workers/: markdown.worker.ts
