[package]
name = "shadowai"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "shadowai"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2.0"
crossterm = "0.28"
ctrlc = "3.4"
chrono = "0.4"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
pulldown-cmark = "0.12"
notify = "7"
glob = "0.3"
regex = "1"
base64 = "0.22"
bytes = "1"
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm"] }
tui-scrollview = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
