[workspace]
members = [
    "crates/shadow-editor",
    "crates/editor-core",
    "crates/editor-renderer",
    "crates/editor-ui",
    "crates/editor-build",
    "crates/editor-hot-reload",
    "crates/editor-assets",
    "crates/editor-ai",
    "crates/editor-lsp-client",
    "crates/editor-header-tool",
]
default-members = ["crates/shadow-editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ShadowBunny"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.22", features = ["derive"] }
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.32"
egui-wgpu = "0.32"
glam = "0.29"
libloading = "0.8"
notify = { version = "7", features = [] }
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ropey = "1"
tree-sitter = "0.22"
uuid = { version = "1.8", features = ["serde", "v4"] }
wgpu = { version = "25.0.2", features = ["vulkan", "gles", "metal", "dx12"] }

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = 0

[profile.release]
debug = 0
incremental = false
strip = "debuginfo"
