[package]
name = "editor-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
editor-core = { path = "../editor-core" }
