[package]
name = "shadow-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
editor-ai = { path = "../editor-ai" }
editor-assets = { path = "../editor-assets" }
editor-build = { path = "../editor-build" }
editor-core = { path = "../editor-core" }
editor-hot-reload = { path = "../editor-hot-reload" }
editor-lsp-client = { path = "../editor-lsp-client" }
editor-renderer = { path = "../editor-renderer" }
editor-ui = { path = "../editor-ui" }
notify = { workspace = true }
wgpu = { workspace = true }
