[package]
name = "ferrum-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs-next = "2.0"
uuid = { version = "1", features = ["v4"] }
